fixed line break in topnav right when logged in

--- a/src/styles/modules/topnav-layout.less
+++ b/src/styles/modules/topnav-layout.less
@@ -15,7 +15,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: @right-width;
+    width: auto;
     margin-right: 16px;
 
     @media @small {
